tests/integration/per_document_grammar/type_system/tag/validation/01_invalid_value/test.itest
RUN: %expect_exit 1 %strictdoc export %S --output-dir Output/ | filecheck %s --dump-input=fail

CHECK: error: could not parse file: {{.*}}input.sdoc.
CHECK: Semantic error: Requirement field of type Tag is invalid: A B C
CHECK: Location: {{.*}}input.sdoc:12:1
CHECK: Hint: Tag field requires ', '-separated values.
CHECK: error: Parallelizer: One of the child processes has exited prematurely.
